--- a/Pages/Shared/_NavbarRightMenuPartial.cshtml
+++ b/Pages/Shared/_NavbarRightMenuPartial.cshtml
@@ -96,7 +96,7 @@
                 <li class="user-header">
                     <img src="~/lib/admin-lte/img/user2-160x160.jpg" class="img-circle" alt="User Image">
                     <p>
-                        Alexander Pierce - Web Developer
+                        Ruchika Perera - Web Developer
                         <small>Member since Nov. 2012</small>
                     </p>
                 </li>
