--- a/Pages/UI/General.cshtml
+++ b/Pages/UI/General.cshtml
@@ -1,7 +1,11 @@
-﻿@page
+﻿
+@page
 @{
     ViewData["Title"] = "General UI";
     ViewData["SubTitle"] = "Preview of UI elements";
+}
+@{
+    Layout = "_LayoutAdminLTE";
 }
 @section breadcrumb{
     <ol class="breadcrumb">
@@ -10,7 +14,47 @@
         <li class="active">General</li>
     </ol>
 }
+
+@section Scripts{
+    <!-- jQuery UI 1.11.4 -->
+    <script src="~/lib/jqueryui/jquery-ui.min.js"></script>
+
+    <!-- Morris.js charts -->
+    <script src="~/lib/raphael/raphael.min.js"></script>
+    <script src="~/lib/morris.js/morris.min.js"></script>
+    <!-- Sparkline -->
+    <script src="~/lib/jquery-sparklines/jquery.sparkline.min.js"></script>
+    <!-- jvectormap -->
+    <script src="~/js/jquery-jvectormap-1.2.2.min.js"></script>
+    @*<script src="~/lib/jvectormap/jquery-jvectormap.min.js"></script>*@
+    <script src="~/js/jquery-jvectormap-world-mill.js"></script>
+
+    <!-- Bootstrap WYSIHTML5 -->
+    <script src="~/lib/bootstrap3-wysiwyg/bootstrap3-wysihtml5.all.min.js"></script>
+    <!-- jQuery Knob Chart -->
+    <script src="~/lib/jquery-knob/jquery.knob.min.js"></script>
+    <!-- daterangepicker -->
+    <script src="~/lib/moment.js/moment.min.js"></script>
+    <script src="~/lib/bootstrap-daterangepicker/daterangepicker.js"></script>
+
+    <!-- datepicker -->
+    <script src="~/lib/bootstrap-datepicker/js/bootstrap-datepicker.min.js"></script>
+
+    <script src="~/lib/admin-lte/js/pages/dashboard.js"></script>
+    <script>
+
+    </script>
+}
 @section styles{
+    <!-- Morris chart -->
+    <link rel="stylesheet" href="~/lib/morris.js/morris.css">
+    <!-- jvectormap -->
+    <link rel="stylesheet" href="~/lib/jvectormap/jquery-jvectormap.min.css">
+    <!-- Daterange picker -->
+    <link rel="stylesheet" href="~/lib/bootstrap-daterangepicker/daterangepicker.min.css">
+    <link rel="stylesheet" href="~/lib/bootstrap-datepicker/css/bootstrap-datepicker.min.css">
+    <!-- bootstrap wysihtml5 - text editor -->
+    <link rel="stylesheet" href="~/lib/bootstrap3-wysiwyg/bootstrap3-wysihtml5.min.css">
     <style>
         .color-palette {
             height: 35px;
@@ -41,7 +85,10 @@
             display: block;
             z-index: 7;
         }
-    </style>}
+    </style>
+}
+<link rel="stylesheet" href="~/lib/admin-lte/css/AdminLTE.min.css">
+
 <!-- COLOR PALETTE -->
 <div class="box box-default color-palette-box">
     <div class="box-header with-border">
